# MyMathLibrary

./: .gitignore  Bootstrap.bat  CMakeLists.txt  Proj6-MyMathLibrary.sln
Proj6-MyMathLibrary/: Proj6-MyMathLibrary.cpp  Proj6-MyMathLibrary.vcxproj  Proj6-MyMathLibrary.vcxproj.filters
mylib/: CMakeLists.txt
mylib/include/: MyAlgo.h  MyArray.h  MyIntrusiveList.h  MyList.h  MyMatrix.h  MyNDimVector.h  MyVector.h  testArray.h  testIntrusiveList.h  testList.h  testMatrix.h  testNDimVector.h  testVector.h
sample/: CMakeLists.txt
sample/src/: main.cpp
